--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "react": "16.9.0",
     "react-icons": "^2.2.7",
     "react-native": "0.61.5",
+    "react-native-app-intro-slider": "^3.0.0",
     "react-native-datepicker-dialog": "0.0.9",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-image-slider-show": "^1.0.3",
+    "react-native-loading-spinner-overlay": "^1.1.0",
     "react-native-picker-select": "^6.6.0",
     "react-native-read-more-text": "^1.1.2",
     "react-native-reanimated": "^1.7.0",
